--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -553,130 +553,145 @@
                         </div>
                     </div>
                 </div>
-                <div role="tabpanel" class="tab-pane" id="social">*</div>
+                <div role="tabpanel" class="tab-pane" id="social"></div>
                 <div role="tabpanel" class="tab-pane table-responsive" id="special">
-                    <table class="table table-special table-hover">
-                        <thead>
-                        <tr style="background-color: #C5B1D4">
-                            <th>Title</th>
-                            <th>Organizer</th>
-                            <th>Email</th>
 
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td><strong>Matroid Theory</strong></td>
-                            <td>Criel Merino</td>
-                            <td>merino<i class="fa-at fa"></i>matem.unam.mx</td>
-                        </tr>
-                        <tr style="background-color: #E1D6E8">
-                            <td><strong>Bergman Spaces and Toeplitz operators</strong></td>
-                            <td>Salvador Pérez-Esteva</td>
-                            <td>spesteva<i class="fa-at fa"></i>im.unam.mx</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Dynamical Systems and Geometry</strong></td>
-                            <td>Aubin Arroyo</td>
-                            <td>aubinarroyo<i class="fa-at fa"></i>im.unam.mx</td>
-                        </tr>
-                        <tr style="background-color: #E1D6E8">
-                            <td><strong>Differential Geometry</strong></td>
-                            <td>Jimmy Petean</td>
-                            <td>jimmy<i class="fa-at fa"></i>cimat.mx</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Current Trends in Symplectic Geometry and Topology</strong></td>
-                            <td>Andrés Pedroza</td>
-                            <td>andres_pedroza<i class="fa-at fa"></i>ucol.mx</td>
-                        </tr>
-                        <tr style="background-color: #E1D6E8">
-                            <td><strong>Symmetric Structures in Discrete Geometry</strong></td>
-                            <td>Daniel Pellicer</td>
-                            <td>pellicer<i class="fa-at fa"></i>matmor.unam.mx</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Algebraic and Enumerative Combinatorics</strong></td>
-                            <td>Ernesto Vallejo</td>
-                            <td>ernevallejo<i class="fa-at fa"></i>gmail.com</td>
-                        </tr>
-                        <tr style="background-color: #E1D6E8">
-                            <td><strong>Discrete Math</strong></td>
-                            <td>Natalia García-Colín</td>
-                            <td>garciacolin.natalia<i class="fa-at fa"></i>googlemail.com</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Mathematical Ecology and Epidemiology</strong></td>
-                            <td>Jorge Velasco-Hernández</td>
-                            <td>jx.velasco<i class="fa-at fa"></i>im.unam.mx</td>
-                        </tr>
-                        <tr style="background-color: #E1D6E8">
-                            <td><strong>Advances in Geometric Methods in Mechanics with Applications</strong></td>
-                            <td>Vakhtang Putkaradze</td>
-                            <td>putkarad<i class="fa-at fa"></i>ualberta.ca</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Nonlinear Elliptic PDE and Systems</strong></td>
-                            <td>Nils Ackerman</td>
-                            <td>nils<i class="fa-at fa"></i>ackermath.info</td>
-                        </tr>
-                        <tr style="background-color: #E1D6E8">
-                            <td><strong>Matrix Analysis and its Applications</strong></td>
-                            <td>FuzhenZhang</td>
-                            <td>zhang<i class="fa-at fa"></i>nova.edu</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Instability of natural convection in cylindrical containers</strong></td>
-                            <td>Eduardo Ramos</td>
-                            <td>erm<i class="fa-at fa"></i>ier.unam.mx</td>
-                        </tr>
-                        <tr style="background-color: #E1D6E8">
-                            <td><strong>Algebraic Geometry</strong></td>
-                            <td>Pedro Luis Del Ángel Rodríguez</td>
-                            <td>luis<i class="fa-at fa"></i>cimat.mx</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Groups and orbifolds in geometry and topology</strong></td>
-                            <td>Ernesto Lupercio</td>
-                            <td>lupercio<i class="fa-at fa"></i>math.cinvestav.mx</td>
-                        </tr>
-                        <tr style="background-color: #E1D6E8">
-                            <td><strong>Special Functions, Orthogonal Polynomials and Applications</strong></td>
-                            <td>Manuel Domínguez de la Iglesia</td>
-                            <td>mdi29<i class="fa-at fa"></i>im.unam.mx</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Singularities of Spaces and Mappings</strong></td>
-                            <td>JawadSnoussi</td>
-                            <td>jsnoussi<i class="fa-at fa"></i>im.unam.mx</td>
-                        </tr>
-                        <tr style="background-color: #E1D6E8">
-                            <td><strong>Poisson Geometry and Its Applications</strong></td>
-                            <td>Misael Avendaño Camacho</td>
-                            <td>misaelave<i class="fa-at fa"></i>mat.uson.mx</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Geometry and Topology</strong></td>
-                            <td>Daniel Juan Pineda</td>
-                            <td>daniel<i class="fa-at fa"></i>matmor.unam.mx</td>
-                        </tr>
-                        <tr style="background-color: #E1D6E8">
-                            <td><strong>Inverse problems and PDE Control Theory</strong></td>
-                            <td>Abdon Choque Rivero</td>
-                            <td>abdon.ifm<i class="fa-at fa"></i>gmail.com</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Commutative Algebra: Homological and Combinatorial Methods</strong></td>
-                            <td>Rafael Heraclio Villarreal</td>
-                            <td>rhvillarreal<i class="fa-at fa"></i>gmail.com</td>
-                        </tr>
-                        <tr style="background-color: #E1D6E8">
-                            <td><strong>Stochastic Processes and Applications</strong></td>
-                            <td>Juan Carlos Pardo</td>
-                            <td>jcpardo<i class="fa-at fa"></i>cimat.mx</td>
-                        </tr>
-                        </tbody>
-                    </table>
+
+
+                    <div class="special-session-a" ><strong>Matroid Theory</strong><br>
+                        <small>Criel Merino (IM-Oax) Carolyn Chun (LSU) Dillon Mayhew (U. Wellington-Victoria)</small> <br>
+                        <small>merinomatem.unam.mx</small><br>
+                    </div>
+                    </br>
+
+                    <div class="special-session-b"><strong>Bergman Spaces and Toeplitz operators</strong><br>
+                            <small>Salvador Perez Esteva (IM-Cuer) Kehe Zhu (St. Univ New York Albay)</small> <br>
+                        <small>spesteva@im.unam.mx</small><br>
+                        </div>
+                    </br>
+                        <div class="special-session-a" ><strong>Dynamical Systems and Geometry</strong><br>
+                            <small>Carlos Cabrera-Aubin Arroyo (IM-Cuer), Tomoki Kawahira (Tokyo I. Of Technology), Federico Rodriuez (Penn State), Andres Navas (U. De santiago)</small> <br>
+                            <small>aubinarroyo@im.unam.mx</small><br>
+                        </div>
+                        </br>
+
+                        <div class="special-session-b"><strong>Differential Geometry</strong><br>
+                            <small>Kazuo Akutagawa Tokyo I. of Tech.), Akito Futaki (U. of Tokyo), Jimy Petean (CIMAT)</small> <br>
+                            <small>jimmy@cimat.mx</small><br>
+                            </div>
+                    </br>
+
+                            <div class="special-session-a" ><strong>Current Trends in Symplectic Geometry and Topology</strong><br>
+                                <small>Cheol-Hyun Cho (Seoul National. Univ.), Eduardo Gonzalez (UMASS, Boston), Haoru Ono (RImS, Kyoto), Andres Pedroza (Colima), Yasha Savelyev (Colima)</small> <br>
+                                <small>andres_pedroza@ucol.mx</small><br>
+                            </div>
+                    </br>
+
+
+                            <div class="special-session-b"><strong>Symmetric Structures in Discrete Geometry</strong><br>
+                                <small>Asia Ivic Weiss ( York Univ.), Daniel Pellicer (CCM), Egon Schulte (NE University, Boston)</small> <br>
+                                <small>pellicer@matmor.unam.mx</small><br>
+                            </div>
+                            </br>
+
+                            <div class="special-session-a"><strong>Algebraic and Enumerative Combinatorics</strong><br>
+                        <small>Ernesto Vallejo (CCM) Marcelo Aguiar (Cornell) Nantel Bergeron (York, Canada)</small> <br>
+                        <small>ernevallejo@gmail.com</small><br>
+                    </div>
+                    </br>
+
+                    <div class="special-session-b"><strong>Discrete Math</strong><br>
+                        <small>Natalia García Colín  (Infotec), Luis Goddyn (Simon Fraser Univ.),  Amanda Montejano (UNAM)</small> <br>
+                        <small>garciacolin.natalia@googlemail.com</small><br>
+                    </div>
+                    </br>
+
+                    <div class="special-session-a"><strong>Mathematical Ecology and Epidemiology</strong><br>
+                        <small>Jorge Velasco (IM-Juriquilla) Michael Li (U. Alberta) Hisahi Inaba (U. Tokyo) Ying-Hen (China Med. University)</small> <br>
+                        <small>jx.velasco@im.unam.mx</small><br>
+                    </div>
+                    </br>
+
+                    <div class="special-session-b"><strong>Advances in Geometric Methods in Mechanics with Applications</strong><br>
+                        <small>Luis García Naranjo (UNAM), Vakhtang Putkaradza (Alberta), Dmitry Zenkov (NCSU)</small> <br>
+                        <small>putkarad@ualberta.ca</small><br>
+                    </div>
+                    </br>
+
+                    <div class="special-session-a"><strong>Nonlinear Elliptic PDE and Systems</strong><br>
+                        <small>Nils Ackerman (IM) Du Yihong (Australia) Musso Monica (Chile) Tanaka Kazunaga (Japan)</small> <br>
+                        <small>nils@ackermath.info</small><br>
+                    </div>
+                    </br>
+
+                    <div class="special-session-b"><strong>Matrix Analysis and its Applications</strong><br>
+                        <small>Qing-Wen Wamng (Shangai Univ.), Fuhzen  Zhang (Miami), Yang Zhang (Mantoba)</small> <br>
+                        <small>zhang@nova.edu</small><br>
+                    </div>
+                    </br>
+
+                    <div class="special-session-a"><strong>Instability of natural convection in cylindrical containers</strong><br>
+                        <small>Eduardo Ramos (IER, UNAM)</small> <br>
+                        <small>erm@ier.unam.mx</small><br>
+                    </div>
+                    </br>
+
+                    <div class="special-session-b"><strong>Algebraic Geometry</strong><br>
+                        <small>Pedro Luis del Angel (CIMAT), Keinichiro Kimura (Tsukuba)</small> <br>
+                        <small>luis@cimat.mx</small><br>
+                    </div>
+                    </br>
+
+                    <div class="special-session-a"><strong>Groups and orbifolds in geometry and topology</strong><br>
+                        <small>Ernesto Lupercio (CINVESTAV) Alejandro Adem (UBC) Jianzhang Pan (Academia Sinica, China)</small> <br>
+                        <small>lupercio@math.cinvestav.mx</small><br>
+                    </div>
+                    </br>
+
+                    <div class="special-session-b"><strong>Special Functions, Orthogonal Polynomials and Applications</strong><br>
+                        <small>Manuel Dominguez (IM, UNAM), Luis E. Garza Gaona (Colima)</small> <br>
+                        <small>mdi29@im.unam.mx</small><br>
+                    </div>
+                    </br>
+
+                    <div class="special-session-a"><strong>Singularities of Spaces and Mappings</strong><br>
+                        <small>Jawad Snousi-Jose Seade (IM-Cuer) David Massey (USA) Masaharu Ishikawa (Japan) Nguyen Viet Dung (Vietnam)</small> <br>
+                        <small>jsnoussi@im.unam.mx</small><br>
+                    </div>
+                    </br>
+
+                    <div class="special-session-b"><strong>Poisson Geometry and Its Applications</strong><br>
+                        <small>Misael Avendaño (UNISON), Matias del Hoyo (IMPA), Rui Loja Fernandes (U. Illinois-Urbana), Yuri Vorobiev (U. de Sonora)</small> <br>
+                        <small>misaelave@mat.uson.mx</small><br>
+                    </div>
+                    </br>
+
+                    <div class="special-session-a"><strong>Geometry and Topology</strong><br>
+                        <small>Daniel Juan  (CCM)   Chris Connell (Indiana)       Fuquan Fang (Capital Normal Univ. China)</small> <br>
+                        <small>daniel@matmor.unam.mx</small><br>
+                    </div>
+                    </br>
+
+                    <div class="special-session-b"><strong>Inverse problems and PDE Control Theory</strong><br>
+                        <small> Luz de Teresa (IM-UNAM), Héctor Morales Bárcenas (UAM-Mexico),  Abdon Choque (IFM)</small> <br>
+                        <small>abdon.ifm@gmail.com</small><br>
+                    </div>
+                    </br>
+
+                    <div class="special-session-a"><strong>Commutative Algebra: Homological and Combinatorial Methods</strong><br>
+                        <small>Louiza Fouli (New Mexico State Univ.), Luis Nuñez Betancourt (CIMA), Rafael Heraclio Villareal (Cinvestav), Yuji Yoshino (Okayama Univ.)</small> <br>
+                        <small>rhvillarreal@gmail.com</small><br>
+                    </div>
+                    </br>
+
+                    <div class="special-session-b"><strong>Stochastic Processes and Applications</strong><br>
+                        <small>Victor Rivero (CIMAT) Joaquin Fontbona (DIM Chile) Kouji Yano (Kyoto)</small> <br>
+                        <small>jcpardo@cimat.mx</small><br>
+                    </div>
+                    </br>
+
+
+
                 </div>
             </div>
         </div>
