- Favico - navbar - navbar breakpoint

--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -7,9 +7,9 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <link rel="icon" href="img/favicon.ico">
 
-    <title>PRIMA</title>
+    <title>PRIMA 2017</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -50,7 +50,7 @@
                 <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand hidden-xs hidden-sm" href="home"><img src="img/primalogo.png" height="80%"> </a>
+            <a class="navbar-brand hidden-xs hidden-sm" href="home"><img src="img/primalogo.png" height="100%"> </a>
             <a class="navbar-brand hidden-md hidden-lg" href="home">PRIMA 2017</a>
 
         </div>
@@ -81,7 +81,7 @@
     <div class="container">
         <div class="row text-center">
 
-            <div id="logosfooter"class="col-md-10 col-centered">
+            <div id="logosfooter"class="col-md-10 col-centered hidden-xs">
 
                         <a href="https://www.unam.mx/"><img src="img/unam-logo.png" class="img-responsive logo"></a>
 
