--- a/web/css/ccm.css
+++ b/web/css/ccm.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-    padding-top: 100px;
+    padding-top: 80px;
     margin-bottom: 200px;
     font-family: "Montserrat", sans-serif;
 }
@@ -18,7 +18,7 @@ body {
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 200px;
+  min-height: 200px;
   /* background: #323b44 none repeat scroll 0 0; */
   background: #3AB34A none repeat scroll 0 0;
   /*border-top: 1px solid #414f5a;*/
@@ -44,18 +44,18 @@ body {
     display: inline-block;
 }
 
-.sponsor {
-    vertical-align: middle;
-    height: 100px;
-    display: block;
-    margin: auto;
-}
-
 .logo {
     vertical-align: middle;
     height: 60px;
     display: inline-block;
     padding: 5px;
+    margin: auto;
+}
+
+.sponsor {
+    vertical-align: middle;
+    height: 100px;
+    display: block;
     margin: auto;
 }
 
@@ -92,18 +92,38 @@ body {
     padding-right: 15px;
 }
 
+/* Nav bar */
+
 .navbar-default .navbar-nav > li > a {
     color: #6db7ca;
     font-size: 16px;
-    padding-top: 35px;
-    /*padding-top: 32px;*/
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .cd-primary-nav {
     background: rgba(42, 108, 118, 0.88) none repeat scroll 0 0;
-
 }
 
+.navbar-default {
+    background-color: #ffffff;
+    border-color: #ccc;
+}
+
+.navbar-brand {
+    height: 80px;
+}
+
+.navbar-toggle {
+    padding: 10px;
+    margin: 25px 15px 25px 0;
+}
+
+.navbar-brand {
+    padding: 10px;
+}
+
+/*
 .cd-primary-nav .cd-label {
     color: #fff;
     font-size: 40px;
@@ -111,6 +131,10 @@ body {
     margin: 2.4em 0 0.8em;
     text-transform: uppercase;
 }
+*/
+
+/* termina navegación */
+/* Estilos del contenido */
 
 .prima-title {
     text-align: center;
@@ -125,6 +149,7 @@ body {
     font-size: 17px;
     color: #888888;
 }
+
 @media only screen and (min-width: 768px) {
 
     .prima-content {
@@ -132,7 +157,6 @@ body {
         padding-bottom: 100px;
     }
 }
-
 
 .prima-program {
     padding-top: 25px;
@@ -165,22 +189,10 @@ body {
     border-bottom: 1px solid #fff;
     padding-top: 20px;
     padding-bottom: 20px;
-
 }
-
-.navbar-default {
-    background-color: #ffffff;
-    border-color: #ffffff;
-}
-
-.navbar-brand {
-    height: 120px;
-}
-
+/* - */
 .page-header {
     border-bottom: 0px;
-    margin: 80px 0 20px;
-    padding-bottom: 9px;
     color: #6db7c2;
 }
 
@@ -290,12 +302,20 @@ h4{
   height: 450px;
   background-color: #777;
 }
-.carousel-inner > .item > img {
+/*.carousel-inner > .item > img {
   position: absolute;
   top: 0;
   left: 0;
   min-width: 100%;
   height: 450px;
+}*/
+
+/* Makes images fully responsive */
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+    display: block;
+    width: 100%;
+    height: auto;
 }
 
 .media-object {
@@ -307,13 +327,41 @@ h4{
     padding-left: 15px;
 }
 
-/*
-
-.carousel-inner > .item > a > img, .carousel-inner > .item > img, .img-responsive, .thumbnail a > img, .thumbnail > img {
-    background-size:     cover;                      !* <------ *!
-    background-repeat:   no-repeat;
-    background-position: center center;
-    display: block;
-    height: auto;
-    max-width: 100%;
-}*/
+/*breakpoin navbar */
+@media (max-width: 1199px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin: 7.5px -15px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .navbar-text {
+        float: none;
+        margin: 15px 0;
+    }
+    /* since 3.1.0 */
+    .navbar-collapse.collapse.in {
+        display: block!important;
+    }
+    .collapsing {
+        overflow: hidden!important;
+    }
+}
