--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -109,7 +109,7 @@
             </div>
             <div class="col-md-12">
                 <h1></h1>
-                <a href="https://www.facebook.com/PRIMA2017Oaxaca/"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a> <a href="https://twitter.com/PRIMAoaxaca"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+                <a href="https://www.facebook.com/PRIMA2017Oaxaca/"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i> Facebook</a> <a href="https://twitter.com/PRIMAoaxaca"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i> Twitter</a>
             </div>
             <div class="copyright-footer">  Copyright 2017 Centro de Ciencias Matemáticas UNAM</div>
 
