--- a/web/css/ccm.css
+++ b/web/css/ccm.css
@@ -314,13 +314,6 @@ h4{
   height: 450px;
   background-color: #777;
 }
-/*.carousel-inner > .item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 450px;
-}*/
 
 /* Makes images fully responsive */
 .carousel-inner > .item > img,
@@ -328,6 +321,14 @@ h4{
     display: block;
     width: 100%;
     height: auto;
+}
+
+.carousel .item>img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    max-width: 100%;
+    height: 100%;
 }
 
 .media-object {
