- Welcome message /home

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -34,8 +34,8 @@
           <img class="first-slide" src="img/alebrije-banner1.png" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Welcome Message</h1>
-                <p class="lead">The Third Pacific Rim Mathematical Association (PRIMA) Congress will take place in Oaxaca, Mexico from August 14th till August 18th of 2017. PRIMA is an association of mathematical sciences institutes, departments and societies from around the Pacific Rim, established in 2005 with the aim of promoting and facilitating the development of the mathematical sciences throughout the Pacific Rim region.</p>
+              <h1>The Third Pacific Rim Mathematical Association (PRIMA) <br><small>Oaxaca, Mexico from August 14th till August 18th of 2017</small></h1>
+                {#<p class="lead">The Third Pacific Rim Mathematical Association (PRIMA) Congress will take place in Oaxaca, Mexico from August 14th till August 18th of 2017. PRIMA is an association of mathematical sciences institutes, departments and societies from around the Pacific Rim, established in 2005 with the aim of promoting and facilitating the development of the mathematical sciences throughout the Pacific Rim region.</p>#}
             </div>
           </div>
         </div>
@@ -86,7 +86,12 @@
     </div>
 
     <div class="container">
-X
+        <div class="page-header text-center"><h2>Welcome Message</h2></div>
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <p class="lead text-center text-muted">The Third Pacific Rim Mathematical Association (PRIMA) Congress will take place in Oaxaca, Mexico from August 14th till August 18th of 2017. PRIMA is an association of mathematical sciences institutes, departments and societies from around the Pacific Rim, established in 2005 with the aim of promoting and facilitating the development of the mathematical sciences throughout the Pacific Rim region.</p>
+            </div>
+        </div>
         <div class="page-header text-center"><h2>Organizing Committee<h2> </div>
         <div class="row text-center plenary">
             <div class="col-md-3"><img src="img/FirstPage_rolando.png" alt="..." class="img-thumbnail text-center"><br>
