--- a/web/css/ccm.css
+++ b/web/css/ccm.css
@@ -340,6 +340,10 @@ h4{
     padding-left: 15px;
 }
 
+.carousel-caption .h1 .small, .h1 small, .h2 .small, .h2 small, .h3 .small, .h3 small, .h4 .small, .h4 small, .h5 .small, .h5 small, .h6 .small, .h6 small, h1 .small, h1 small, h2 .small, h2 small, h3 .small, h3 small, h4 .small, h4 small, h5 .small, h5 small, h6 .small, h6 small {
+    color: #fff;
+}
+
 /*breakpoin navbar */
 @media (max-width: 1199px) {
     .navbar-header {
@@ -378,3 +382,4 @@ h4{
         overflow: hidden!important;
     }
 }
+
