Misma altura class well

--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -28,86 +28,86 @@
             <!-- Tab panes -->
             <div class="tab-content prima-program">
                 <div role="tabpanel" class="tab-pane active table-responsive" id="general">
-{#
-                    <table class="table table-general table-hover">
-                        <thead>
-                        <tr>
-                            <th></th>
-                            <th style="background-color: #EEF5F6; text-align: center">SUNDAY 13</th>
-                            <th style="text-align: center">MONDAY 14</th>
-                            <th style="background-color: #EEF5F6; text-align: center">TUESDAY 15</th>
-                            <th style="text-align: center">WEDNESDAY 16</th>
-                            <th style="background-color: #EEF5F6; text-align: center">THURSDAY 17</th>
-                            <th style="text-align: center">FRIDAY 18</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <th scope="row" style="background-color: #E2F0F2; text-align: left;">9:00-10:00</th>
-                            <td style="background-color: #D6EAED">&nbsp;</td>
-                            <td style="background-color: #E2F0F2">INAUGURAL CEREMONY</td>
-                            <td style="background-color: #D6EAED">PL 3</td>
-                            <td style="background-color: #E2F0F2">PL 6</td>
-                            <td style="background-color: #D6EAED">PL 9</td>
-                            <td style="background-color: #E2F0F2">PL 12</td>
-                        </tr>
-                        <tr> <th scope="row">10:00-11:00</th>
-                            <td style="background-color: #E2F0F2">&nbsp;</td>
-                            <td>BREAK 15 min<br>PL1 (10:15-11:15)</td>
-                            <td style="background-color: #E2F0F2">PL 4</td>
-                            <td>PL 7</td>
-                            <td style="background-color: #E2F0F2">PL 10</td>
-                            <td>PL 13</td>
-                        </tr>
-                        <tr>
-                            <th scope="row" style="background-color: #E2F0F2; text-align: left">11:00-12:00</th>
-                            <td style="background-color: #D6EAED">&nbsp;</td>
-                            <td style="background-color: #E2F0F2">PL2 (11:15-12:15)</td>
-                            <td style="background-color: #D6EAED">PL 5</td>
-                            <td style="background-color: #E2F0F2">PL 8</td>
-                            <td style="background-color: #D6EAED">PL 11</td>
-                            <td style="background-color: #E2F0F2">PL 14</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">12:00-15:00</th>
-                            <td style="background-color: #E2F0F2">&nbsp;</td>
-                            <td>LUNCH</td>
-                            <td style="background-color: #E2F0F2">LUNCH</td>
-                            <td>LUNCH</td>
-                            <td style="background-color: #E2F0F2">LUNCH</td>
-                            <td>LUNCH</td>
-                        </tr>
-                        <tr>
-                            <th scope="row" style="background-color: #E2F0F2">15:00-19:30</th>
-                            <td style="background-color: #D6EAED">REGISTRATION AND <br>WELCOME<br> RECEPTION</td>
-                            <td style="background-color: #E2F0F2">SPECIAL SESSIONS</td>
-                            <td style="background-color: #D6EAED">SPECIAL SESSIONS</td>
-                            <td style="background-color: #E2F0F2">FREE AFTERNOON</td>
-                            <td style="background-color: #D6EAED">SPECIAL SESSIONS</td>
-                            <td style="background-color: #E2F0F2">SPECIAL SESSIONS</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">19:30-20:00</th>
-                            <td style="background-color: #E2F0F2">&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td style="background-color: #E2F0F2">&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td style="background-color: #E2F0F2">&nbsp;</td>
-                            <td>&nbsp;</td>
-                        </tr>
-                        <tr>
-                            <th scope="row" style="background-color: #E2F0F2">20:00-21:00</th>
-                            <td style="background-color: #D6EAED">&nbsp;</td>
-                            <td style="background-color: #E2F0F2">PUBLIC LECTURE</td>
-                            <td style="background-color: #D6EAED">PUBLIC LECTURE</td>
-                            <td style="background-color: #E2F0F2">BANQUET</td>
-                            <td style="background-color: #D6EAED">&nbsp;</td>
-                            <td style="background-color: #E2F0F2">&nbsp;</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                    <p class="text-center p-table-general"> <strong>PL = PLENARY LECTURE</strong></p>
-#}
+                    {#
+                                        <table class="table table-general table-hover">
+                                            <thead>
+                                            <tr>
+                                                <th></th>
+                                                <th style="background-color: #EEF5F6; text-align: center">SUNDAY 13</th>
+                                                <th style="text-align: center">MONDAY 14</th>
+                                                <th style="background-color: #EEF5F6; text-align: center">TUESDAY 15</th>
+                                                <th style="text-align: center">WEDNESDAY 16</th>
+                                                <th style="background-color: #EEF5F6; text-align: center">THURSDAY 17</th>
+                                                <th style="text-align: center">FRIDAY 18</th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                            <tr>
+                                                <th scope="row" style="background-color: #E2F0F2; text-align: left;">9:00-10:00</th>
+                                                <td style="background-color: #D6EAED">&nbsp;</td>
+                                                <td style="background-color: #E2F0F2">INAUGURAL CEREMONY</td>
+                                                <td style="background-color: #D6EAED">PL 3</td>
+                                                <td style="background-color: #E2F0F2">PL 6</td>
+                                                <td style="background-color: #D6EAED">PL 9</td>
+                                                <td style="background-color: #E2F0F2">PL 12</td>
+                                            </tr>
+                                            <tr> <th scope="row">10:00-11:00</th>
+                                                <td style="background-color: #E2F0F2">&nbsp;</td>
+                                                <td>BREAK 15 min<br>PL1 (10:15-11:15)</td>
+                                                <td style="background-color: #E2F0F2">PL 4</td>
+                                                <td>PL 7</td>
+                                                <td style="background-color: #E2F0F2">PL 10</td>
+                                                <td>PL 13</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row" style="background-color: #E2F0F2; text-align: left">11:00-12:00</th>
+                                                <td style="background-color: #D6EAED">&nbsp;</td>
+                                                <td style="background-color: #E2F0F2">PL2 (11:15-12:15)</td>
+                                                <td style="background-color: #D6EAED">PL 5</td>
+                                                <td style="background-color: #E2F0F2">PL 8</td>
+                                                <td style="background-color: #D6EAED">PL 11</td>
+                                                <td style="background-color: #E2F0F2">PL 14</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">12:00-15:00</th>
+                                                <td style="background-color: #E2F0F2">&nbsp;</td>
+                                                <td>LUNCH</td>
+                                                <td style="background-color: #E2F0F2">LUNCH</td>
+                                                <td>LUNCH</td>
+                                                <td style="background-color: #E2F0F2">LUNCH</td>
+                                                <td>LUNCH</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row" style="background-color: #E2F0F2">15:00-19:30</th>
+                                                <td style="background-color: #D6EAED">REGISTRATION AND <br>WELCOME<br> RECEPTION</td>
+                                                <td style="background-color: #E2F0F2">SPECIAL SESSIONS</td>
+                                                <td style="background-color: #D6EAED">SPECIAL SESSIONS</td>
+                                                <td style="background-color: #E2F0F2">FREE AFTERNOON</td>
+                                                <td style="background-color: #D6EAED">SPECIAL SESSIONS</td>
+                                                <td style="background-color: #E2F0F2">SPECIAL SESSIONS</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">19:30-20:00</th>
+                                                <td style="background-color: #E2F0F2">&nbsp;</td>
+                                                <td>&nbsp;</td>
+                                                <td style="background-color: #E2F0F2">&nbsp;</td>
+                                                <td>&nbsp;</td>
+                                                <td style="background-color: #E2F0F2">&nbsp;</td>
+                                                <td>&nbsp;</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row" style="background-color: #E2F0F2">20:00-21:00</th>
+                                                <td style="background-color: #D6EAED">&nbsp;</td>
+                                                <td style="background-color: #E2F0F2">PUBLIC LECTURE</td>
+                                                <td style="background-color: #D6EAED">PUBLIC LECTURE</td>
+                                                <td style="background-color: #E2F0F2">BANQUET</td>
+                                                <td style="background-color: #D6EAED">&nbsp;</td>
+                                                <td style="background-color: #E2F0F2">&nbsp;</td>
+                                            </tr>
+                                            </tbody>
+                                        </table>
+                                        <p class="text-center p-table-general"> <strong>PL = PLENARY LECTURE</strong></p>
+                    #}
                     <!-- Nav tabs -->
                     <ul class="nav nav-pills nav-justified" role="tablist">
                         <li role="presentation" class="active"><a href="#sunday" aria-controls="sunday" role="tab" data-toggle="pill">Sunday 13</a></li>
@@ -165,7 +165,7 @@
                                 <div class="panel-heading"><strong>15:00-17:00</strong></div>
                                 <div class="panel-body">
                                     <h3>Special Sessions Group 1</h3><br>
-                                    <div class="row">
+                                    <div class="row row-flex row-flex-wrap">
                                         <div class="col-md-3">
                                             <div class="well">
                                                 <h4>Matroid Theory</h4>
@@ -293,7 +293,7 @@
                                 <div class="panel-heading"><strong>15:00-17:00</strong></div>
                                 <div class="panel-body">
                                     <h3>Special Sessions Group 1</h3><br>
-                                    <div class="row">
+                                    <div class="row row-flex row-flex-wrap">
                                         <div class="col-md-3">
                                             <div class="well">
                                                 <h4>Algebraic Geometry</h4>
@@ -423,7 +423,7 @@
                                 <div class="panel-heading"><strong>15:00-17:00</strong></div>
                                 <div class="panel-body">
                                     <h3>Special Sessions Group 2</h3><br>
-                                    <div class="row">
+                                    <div class="row row-flex row-flex-wrap">
                                         <div class="col-md-4">
                                             <div class="well">
                                                 <h4>Differential Geometry</h4>
@@ -508,7 +508,7 @@
                                 <div class="panel-heading"><strong>15:00-17:00</strong></div>
                                 <div class="panel-body">
                                     <h3>Special Sessions Group 2</h3><br>
-                                    <div class="row">
+                                    <div class="row row-flex row-flex-wrap">
                                         <div class="col-md-4">
                                             <div class="well">
                                                 <h4>Groups and orbifolds in geometry and topology</h4>
@@ -556,8 +556,6 @@
                 <div role="tabpanel" class="tab-pane" id="social"></div>
                 <div role="tabpanel" class="tab-pane table-responsive" id="special">
 
-
-
                     <div class="special-session-a" ><strong>Matroid Theory</strong><br>
                         <small>Criel Merino (IM-Oax) Carolyn Chun (LSU) Dillon Mayhew (U. Wellington-Victoria)</small> <br>
                         <small>merinomatem.unam.mx</small><br>
@@ -565,36 +563,35 @@
                     </br>
 
                     <div class="special-session-b"><strong>Bergman Spaces and Toeplitz operators</strong><br>
-                            <small>Salvador Perez Esteva (IM-Cuer) Kehe Zhu (St. Univ New York Albay)</small> <br>
+                        <small>Salvador Perez Esteva (IM-Cuer) Kehe Zhu (St. Univ New York Albay)</small> <br>
                         <small>spesteva@im.unam.mx</small><br>
-                        </div>
+                    </div>
                     </br>
-                        <div class="special-session-a" ><strong>Dynamical Systems and Geometry</strong><br>
-                            <small>Carlos Cabrera-Aubin Arroyo (IM-Cuer), Tomoki Kawahira (Tokyo I. Of Technology), Federico Rodriuez (Penn State), Andres Navas (U. De santiago)</small> <br>
-                            <small>aubinarroyo@im.unam.mx</small><br>
-                        </div>
-                        </br>
-
-                        <div class="special-session-b"><strong>Differential Geometry</strong><br>
-                            <small>Kazuo Akutagawa Tokyo I. of Tech.), Akito Futaki (U. of Tokyo), Jimy Petean (CIMAT)</small> <br>
-                            <small>jimmy@cimat.mx</small><br>
-                            </div>
+                    <div class="special-session-a" ><strong>Dynamical Systems and Geometry</strong><br>
+                        <small>Carlos Cabrera-Aubin Arroyo (IM-Cuer), Tomoki Kawahira (Tokyo I. Of Technology), Federico Rodriuez (Penn State), Andres Navas (U. De santiago)</small> <br>
+                        <small>aubinarroyo@im.unam.mx</small><br>
+                    </div>
                     </br>
 
-                            <div class="special-session-a" ><strong>Current Trends in Symplectic Geometry and Topology</strong><br>
-                                <small>Cheol-Hyun Cho (Seoul National. Univ.), Eduardo Gonzalez (UMASS, Boston), Haoru Ono (RImS, Kyoto), Andres Pedroza (Colima), Yasha Savelyev (Colima)</small> <br>
-                                <small>andres_pedroza@ucol.mx</small><br>
-                            </div>
+                    <div class="special-session-b"><strong>Differential Geometry</strong><br>
+                        <small>Kazuo Akutagawa Tokyo I. of Tech.), Akito Futaki (U. of Tokyo), Jimy Petean (CIMAT)</small> <br>
+                        <small>jimmy@cimat.mx</small><br>
+                    </div>
                     </br>
 
+                    <div class="special-session-a" ><strong>Current Trends in Symplectic Geometry and Topology</strong><br>
+                        <small>Cheol-Hyun Cho (Seoul National. Univ.), Eduardo Gonzalez (UMASS, Boston), Haoru Ono (RImS, Kyoto), Andres Pedroza (Colima), Yasha Savelyev (Colima)</small> <br>
+                        <small>andres_pedroza@ucol.mx</small><br>
+                    </div>
+                    </br>
 
-                            <div class="special-session-b"><strong>Symmetric Structures in Discrete Geometry</strong><br>
-                                <small>Asia Ivic Weiss ( York Univ.), Daniel Pellicer (CCM), Egon Schulte (NE University, Boston)</small> <br>
-                                <small>pellicer@matmor.unam.mx</small><br>
-                            </div>
-                            </br>
+                    <div class="special-session-b"><strong>Symmetric Structures in Discrete Geometry</strong><br>
+                        <small>Asia Ivic Weiss ( York Univ.), Daniel Pellicer (CCM), Egon Schulte (NE University, Boston)</small> <br>
+                        <small>pellicer@matmor.unam.mx</small><br>
+                    </div>
+                    </br>
 
-                            <div class="special-session-a"><strong>Algebraic and Enumerative Combinatorics</strong><br>
+                    <div class="special-session-a"><strong>Algebraic and Enumerative Combinatorics</strong><br>
                         <small>Ernesto Vallejo (CCM) Marcelo Aguiar (Cornell) Nantel Bergeron (York, Canada)</small> <br>
                         <small>ernevallejo@gmail.com</small><br>
                     </div>
@@ -689,8 +686,6 @@
                         <small>jcpardo@cimat.mx</small><br>
                     </div>
                     </br>
-
-
 
                 </div>
             </div>
